# cpp-im-gateway

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.docker/.env/: .env.development  .env.test
.docker/env/: .env.test
configs/: 99-local.conf
docs/: PERFORMANCE.md  TODO.md  perf_troubleshooting.md  select_DECISION_LOG.md  select_PERFORMANCE.md
scripts/: benchmark.sh
src/: main.cpp
src/server/: TCPserver.cpp  TCPserver.h  echo_server.cpp  echo_server.h
study_draft/: curious_echo.md
